# Treble-Info

./: README.md
.run/: Host Tests.run.xml  Instrumented Tests.run.xml
app/: billing.properties  build.gradle.kts  lint.xml  version.properties
app/librariesConfig/libraries/: Gki.json  hardware_interfaces.json  libbase.json  libtinyxml2.json  libutils.json  libvintf.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TrebleDetector.cpp
app/src/main/cpp/libvintf-shims/: Apex.cpp
app/src/main/cpp/libvintf-shims/android/: fdsan.cpp  log.cpp
app/src/main/cpp/libvintf-shims/include/aidl/: metadata.h
app/src/main/cpp/libvintf-shims/include/android/: fdsan.h  log.h
app/src/main/cpp/libvintf-shims/libbase/: properties.cpp
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/drawable-v33/: ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/values-night-v23/: styles.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-notnight/: styles.xml
app/src/main/res/values-notnight-v23/: styles.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/values-v27/: styles.xml
app/src/main/res/values-v29/: styles.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/values-zh-rcn/: strings.xml
app/src/main/resources/: compatibility_matrix.1.xml  compatibility_matrix.2.xml  compatibility_matrix.3.xml  compatibility_matrix.4.xml  compatibility_matrix.5.xml  compatibility_matrix.6.xml  compatibility_matrix.7.xml  compatibility_matrix.legacy.xml
app/src/sharedTest/: pull.sh
audit_translations/: audit_translations.py
fastlane/: Fastfile
fastlane/metadata/android/ar/: full_description.txt
fastlane/metadata/android/en-US/changelogs/: 5001001.txt  5002003.txt
fastlane/metadata/android/es-ES/: full_description.txt  short_description.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt
fastlane/metadata/android/fr-FR/changelogs/: 5001001.txt  5002003.txt
fastlane/metadata/android/hu-HU/: full_description.txt
fastlane/metadata/android/id/: full_description.txt
fastlane/metadata/android/id/changelogs/: 5001001.txt  5002003.txt
fastlane/metadata/android/ja-JP/: full_description.txt
fastlane/metadata/android/ja-JP/changelogs/: 5001001.txt  5002003.txt
fastlane/metadata/android/pt-BR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/pt-BR/changelogs/: 5001001.txt  5002003.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
fastlane/metadata/android/ru-RU/changelogs/: 5001001.txt  5002003.txt
fastlane/metadata/android/th/: full_description.txt  short_description.txt
(+30 files in other folders)
